--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "mongodb": "^6.17.0",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
     "oracledb": "^6.8.0",
@@ -64,9 +65,9 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "concurrently": "^8.2.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5",
-    "concurrently": "^8.2.2"
+    "typescript": "^5"
   }
 }
