--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
+    "echarts": "^5.6.0",
     "embla-carousel-react": "8.5.1",
     "formidable": "^3.5.4",
     "input-otp": "1.4.1",
