--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "@next-auth/mongodb-adapter": "^1.1.3",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -46,10 +47,12 @@
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "formidable": "^3.5.4",
+    "googleapis": "^150.0.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "mongodb": "^6.17.0",
     "next": "15.2.4",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "oracledb": "^6.8.0",
     "react": "^19",
