--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
-fastapi==0.109.2
-uvicorn==0.27.1
-requests==2.31.0
+fastapi==0.115.9
+uvicorn==0.24.0
+requests==2.32.4
 beautifulsoup4==4.12.3
 lxml==5.1.0
-pydantic==2.6.1 
+pydantic==2.10.6
+python-dotenv==1.0.1
+boto3==1.38.19
+PyMuPDF==1.26.0
+pykospacing==0.5
+sseclient-py==1.7.2 
