--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,11 @@ pydantic==2.10.6
 python-dotenv==1.0.1
 boto3==1.38.19
 PyMuPDF==1.26.0
-pykospacing==0.5
-sseclient-py==1.7.2 
+sseclient-py==1.7.2
+# Voice Analysis Dependencies
+librosa==0.10.1
+scipy==1.11.4
+dtw-python==1.3.0
+praat-parselmouth==0.4.3
+numpy==1.24.4
+# pykospacing - 설치 문제로 일시적으로 제외
