--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "formidable": "^3.5.4",
     "googleapis": "^150.0.1",
     "input-otp": "1.4.1",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.454.0",
     "mongodb": "^6.17.0",
     "next": "15.2.4",
