--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "echarts": "^5.6.0",
+    "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "8.5.1",
     "formidable": "^3.5.4",
     "googleapis": "^150.0.1",
