--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "audiobuffer-to-wav": "^1.0.0",
     "autoprefixer": "^10.4.20",
     "aws-sdk": "^2.1692.0",
     "bcryptjs": "^3.0.2",
@@ -69,7 +70,7 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
-    "wavesurfer.js": "^7.9.5",
+    "wavesurfer.js": "^7",
     "zod": "^3.24.1"
   },
   "devDependencies": {
